--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="green">#0F0</color>
+    <color name="white">#FFF</color>
     <color name="grey_light">#EEE</color>
 </resources>
